Add styling to medium screen size

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <div class="logobackground">
         <img src="img/logo-bg.png" alt="" />
       </div>
-      <hr>
       <ul>
+        <hr>
         <li><p>The</p><p class="secondline">Weblogue</p><hr></li>
         <li><p>Back</p><p class="secondline">Issues</p><hr></li>
         <li><p>About</p><p class="secondline">Our Paper</p><hr></li>
       </ul>
     </div>
-    <div class="logotype">
+    <div class="logotext">
       <img src="img/logo.png" alt="" />
     </div>
 
@@ -32,41 +32,44 @@
         <p>
           In the year 1878 I took my degree of Doctor of Medicine of the University of London, and proceeded to Netley to go through the course prescribed for surgeons in the army. Having completed my studies there, I was duly attached to the Fifth Northumberland Fusiliers as Assistant Surgeon. The regiment was stationed in India at the time, and before I could join it, the second Afghan war had broken out. On landing at Bombay, I learned that my corps had advanced through the passes, and was already deep in the enemy's country.
         </p>
-        <hr>
-        <div class="profilepics">
-          <p>victors & villains</p>
-          <ul>
-            <li><img src="img/holmes.jpg" alt="" />
-              <p>Sherlock</p>
-              <h4 class="secondline">Holmes</h4>
-            </li>
-            <li><img src="img/watson.jpg" alt="" />
-              <p>Dr John Hemish</p>
-              <h4 class="secondline">Watson</h4>
-            </li>
-            <li><img src="img/mycroft.jpg" alt="" />
-              <p>Mycroft</p>
-              <h4 class="secondline">Holmes</h4>
-            </li>
-            <li><img src="img/moriarty.jpg" alt="" />
-              <p>Prof James</p>
-              <h4 class="secondline">Moriarty</h4>
-            </li>
-            <li><img src="img/adler.jpg" alt="" />
-              <p>Irene</p>
-              <h4 class="secondline">Adler</h4>
-            </li>
-            <li><img src="img/winter.jpg" alt="" />
-              <p>James</p>
-              <h4 class="secondline">Winter</h4>
-            </li>
-          </ul>
-        </div>
-    </div>
+      </div>
+      <hr>
+      <div class="profilepics">
+        <p>victors & villains</p>
+        <ul>
+          <li><img src="img/holmes.jpg" alt="" />
+            <p>Sherlock</p>
+            <h4 class="secondline">Holmes</h4>
+          </li>
+          <li><img src="img/watson.jpg" alt="" />
+            <p>Dr John Hemish</p>
+            <h4 class="secondline">Watson</h4>
+          </li>
+          <li><img src="img/mycroft.jpg" alt="" />
+            <p>Mycroft</p>
+            <h4 class="secondline">Holmes</h4>
+          </li>
+          <li><img src="img/moriarty.jpg" alt="" />
+            <p>Prof James</p>
+            <h4 class="secondline">Moriarty</h4>
+          </li>
+          <li><img src="img/adler.jpg" alt="" />
+            <p>Irene</p>
+            <h4 class="secondline">Adler</h4>
+          </li>
+          <li><img src="img/winter.jpg" alt="" />
+            <p>James</p>
+            <h4 class="secondline">Winter</h4>
+          </li>
+        </ul>
+      </div>
     <div class="footer">
-      <img class="space" src="img/lilguy.png" alt="" />
-      <p>Illustrations by <a href="#">Sidney Paget</a>, words by <a href="#">Sir Arthur Conan Doyle</a>.</p>
-      <p>What remains is by <a href="#">Ethan Marcotte</a>.</p>
+      <img src="img/lilguy.png" alt="" />
+      <hr>
+      <div class="footerText">
+        <p>Illustrations by <a href="#">Sidney Paget</a>, words by <a href="#">Sir Arthur Conan Doyle</a>.</p>
+        <p>What remains is by <a href="#">Ethan Marcotte</a>.</p>
+      </div>
     </div>
   </div>
   </body>
